--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="mb-5 text-center">
         <p>Stáhnout demo (s počítačem a kreslením) verze pro android</p>
-    <a href = "app/ar_app.apk"
+    <a href = "arapp.apk"
     Download = "AR_application">
        <button type = "button"> Stáhnout </button>
     </a>
