--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
 
 
     <div class="mb-5 text-center">
-        <p>Stáhnout demo (s počítačem a kreslením) verze pro android</p>
-    <a href = "arapp.apk"
-    Download = "AR_application">
-       <button type = "button"> Stáhnout </button>
-    </a>
+        <p>Stáhnout demo verze pro android</p>
+   <a href=" https://drive.google.com/file/d/11xuzWDXivFdtz3CoasAcSR0a0NIcaxBF/view?usp=drivesdk" target="_blank">Stahnout</a>
+
+     
 </div>
 </div>
 
